tests/bad/typed_literals.oc
/// fail: Couldn't find this identifier: u128

def main() {
    let x = 125u128
}